--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,16 @@
   },
   "homepage": "https://github.com/devdbrandy/octo-semantic#readme",
   "devDependencies": {
+    "husky": "^7.0.1",
     "semantic-release": "^17.4.4"
   },
   "release": {
     "branches": [
       "main"
     ]
+  },
+  "dependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4"
   }
 }
